examples/test/testpolicy18728.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18728
  namespace: namespace19
spec:
  podSelector:
    matchLabels:
      key11: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value36
          key3: value29
          key31: value2
      podSelector:
        matchLabels:
          key7: value30
